--- a/node.yaml
+++ b/node.yaml
@@ -49,7 +49,7 @@ cask_packages:
   - cmd-eikana
   - docker-beta
   - dropbox
-  - google-chrome-dev
+  - google-chrome
   - google-chrome-canary
   - google-japanese-ime
   - jasper
