--- a/node.yaml
+++ b/node.yaml
@@ -55,6 +55,7 @@ cask_packages:
   - google-chrome
   - google-chrome-canary
   - google-japanese-ime
+  - google-photos-backup-and-sync
   - jasper
   - jetbrains-toolbox
   - karabiner-elements
